fixed some layout problems

--- a/_src/less/layout.less
+++ b/_src/less/layout.less
@@ -5,7 +5,11 @@
 @screen-small: (@article-width + @padding * 2);
 @screen-medium: (@screen-small + @menubar-width * 2);
 
-body {
+body.menu-open{
+  overflow: hidden;
+}
+
+#main-wrap {
   overflow: hidden;
 }
 
