--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1286,7 +1286,10 @@ button.close {
   -webkit-font-smoothing: none;
   -moz-osx-font-smoothing: none;
 }
-body {
+body.menu-open {
+  overflow: hidden;
+}
+#main-wrap {
   overflow: hidden;
 }
 #main {
